tests/valid/types/generic_path_aliases.fig
// Type aliases using generic paths
type HashMap[K, V] = core::Map[K, V]
type Set[T] = std::collections::HashSet[T]
