tests/invalid/syntax/generic_using.fig
// Invalid: Using generic syntax in using statement
using std::collections[T]
